syntax="proto3";

package student;

option go_package="platzi.com/go/grpc/studentpb";

message Student {
    string id = 1;
    string name = 2;
    int32 age = 3;
}

message GetStudentRequest {
    string id = 1;
}

message SetStudentResponse {
    string id = 1;
}

service StudentService {
    rpc GetStudent(GetStudentRequest) returns (Student);
    rpc SetStudent(Student) returns (SetStudentResponse);
}
